

<resources>

    <string name="app_name">Jolly</string>

    <string name="zhihu_daily">Zhihu Daily</string>
    <string name="guokr_handpick">Guokr Handpick</string>
    <string name="douban_moment">Douban Moment</string>

    <string name="favorites">Favorites</string>
    <string name="info">Info</string>
    <string name="timeline">Timeline</string>

    <!-- general -->
    <string name="positive">OK</string>
    <string name="negative">Cancel</string>
    <string name="something_wrong">Something wrong…</string>
    <!-- general end -->

    <!-- timeline -->
    <string name="fab_description">Select a specific date</string>
    <string name="empty_content">Oops, nothing here…</string>
    <!-- timeline end -->

    <!-- favorites -->
    <string name="no_favorites">NO FAVORITES</string>
    <!-- favorites end -->

    <!--info fragment-->
    <string name="settings">Settings</string>
    <string name="no_picture_mode">No Image Mode</string>
    <string name="no_image_mode_desc">Images will not be loaded when articles is being shown</string>
    <string name="in_app_browser">In-App Browser</string>
    <string name="in_app_browser_desc">Open links with Chrome Custom Tabs</string>
    <string name="night_mode">Night Mode</string>
    <string name="time_of_saving_articles">Time of Saving Articles</string>
    <string name="clear_image_cache">Clear Image Cache</string>
    <string name="clear_image_cache_successfully">Cache successfully cleared</string>
    <string name="about">About</string>
    <string name="version">Version:V1.0</string>
    <string name="rate">Rate</string>
    <string name="rate_desc">If you like the Paper Plane app, please do rate it</string>
    <string name="author">Authors</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_desc">https://github.com/TonnyL/PaperPlane/graphs/contributors</string>
    <string name="follow_me_on_github">Follow Me on GitHub</string>
    <string name="follow_me_on_github_desc">https://github.com/TonnyL</string>
    <string name="follow_me_on_zhihu">Follow Me on ZhiHu</string>
    <string name="follow_me_on_zhihu_desc">https://www.zhihu.com/people/lizhaotailang</string>
    <string name="support">Support</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_desc">https://github.com/TonnyL/PaperPlane</string>
    <string name="feedback">Report Bugs / Advices</string>
    <string name="feedback_desc">Help me to improve the Paper Plane app</string>
    <string name="sendto">mailto:marktonymengyi@gmail.com</string>
    <string name="mail_topic">PaperPlane Feedback / Advice</string>
    <string name="device_model">Device Version:</string>
    <string name="sdk_version">SDK Version:</string>
    <string name="no_mail_app">No email app found</string>
    <string name="coffee">Buy Me A Cup of Coffee</string>
    <string name="coffee_description">If you think I deserve to get paid for my work, buy me a cup of coffee for support</string>
    <string name="donate">Donate Developer</string>
    <string name="donate_content">Alipay account will be copied to clipboard.Launch Alipay and paste it to finish donating.Thanks for support!</string>
    <string name="donate_account">marktonymengyi@gmail.com</string>
    <string name="open_source_licenses">Open Source Licenses</string>

    <string-array name="time_of_saving_articles">
        <item>1 day</item>
        <item>5 days</item>
        <item>15 days</item>
        <item>30 days</item>
    </string-array>

    <string-array name="time_of_saving_articles_item">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <!-- info fragment end -->

    <!-- article details -->
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_open_in_browser">Open with system browser</string>
    <string name="action_share">Share</string>
    <string name="share_to">Share to</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="share_error">Share failed</string>
    <!-- article details end -->

    <!-- others -->
    <string name="no_browser_found">No browser found</string>
    <string name="image_view_cover_desc">Cover</string>
    <!-- others end -->

</resources>
