<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings" >

        <SwitchPreference android:title="@string/no_picture_mode"
            android:key = "no_picture_mode"
            android:defaultValue="false"
            android:summary="@string/no_image_mode_desc"/>

        <SwitchPreference android:title="@string/in_app_browser"
            android:key="chrome_custom_tabs"
            android:defaultValue="true"
            android:summary="@string/in_app_browser_desc"/>

        <SwitchPreference
            android:title="@string/night_mode"
            android:defaultValue="false"
            android:key="night_mode" />

        <ListPreference
            android:title="@string/time_of_saving_articles"
            android:summary="%s"
            android:key="time_of_saving_articles"
            android:entries="@array/time_of_saving_articles"
            android:entryValues="@array/time_of_saving_articles_item"
            android:defaultValue="2"
            />

        <Preference
            android:title="@string/clear_image_cache"
            android:key="clear_glide_cache" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference android:title = "@string/contributors"
            android:key="contributors"
            android:summary="@string/contributors_desc"/>

        <Preference
            android:title="@string/follow_me_on_github"
            android:key="follow_me_on_github"
            android:summary="@string/follow_me_on_github" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/support">

        <Preference android:title="@string/source_code"
            android:key="source_code"
            android:summary="@string/source_code_desc" />

        <Preference android:title="@string/feedback"
            android:key="feedback"
            android:summary="@string/feedback_desc"/>

        <Preference android:title="@string/coffee"
            android:key="coffee"
            android:summary="@string/coffee_description"/>

        <Preference android:title="@string/open_source_licenses"
            android:key="open_source_license" />

    </PreferenceCategory>

</PreferenceScreen>