<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:enabled="true">

        <item
            android:id="@+id/nav_timeline"
            android:enabled="true"
            android:icon="@drawable/ic_activity_black_24dp"
            android:title="@string/timeline" />

        <item
            android:id="@+id/nav_favorites"
            android:enabled="true"
            android:icon="@drawable/ic_favorite_24dp"
            android:title="@string/favorites" />

        <item
            android:id="@+id/nav_info"
            android:enabled="true"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/info" />

    </group>
</menu>